Added stored procedures Updated data.cc to use stored procedures added type and timestamps to new objects table

--- a/Makefile.MACOSX
+++ b/Makefile.MACOSX
@@ -24,7 +24,7 @@ dbtool : libcs.dylib dbtool.cc
 
 .PHONY: clean
 clean:
-	rm -rf *.o libcs.dylib ConnServer *.dSYM
+	rm -rf *.o libcs.dylib ConnServer *.dSYM *.log
 	cd modules && $(MAKE) clean
 
 .PHONY: install
